<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent"
    android:layout_margin="@dimen/_16sdp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_savetoFiles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/iv_main1"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="@dimen/_570sdp"
            android:background="@android:color/transparent"
            tools:src = "@tools:sample/avatars"
            android:backgroundTint="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/image" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_savetoFiles"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:textAllCaps="false"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="@dimen/_8ssp"
        android:autoSizeMaxTextSize="@dimen/_12ssp"
        android:textSize="@dimen/_12ssp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/cv_main"
        app:layout_constraintStart_toStartOf="@id/cv_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_set_wp"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_set_wp"
        android:text="@string/set_as_wallpaper"
        android:textColor="#ffffff"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:textAllCaps="false"
        android:textSize="@dimen/_12ssp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/btn_savetoFiles"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="@id/btn_savetoFiles"
        app:layout_constraintBottom_toBottomOf="@id/btn_savetoFiles"
        app:layout_constraintEnd_toEndOf="@id/cv_main"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:progressTint="@color/colorPrimary"
        android:progressBackgroundTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:theme="@style/Apptheme"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>